--- a/map-listings.html
+++ b/map-listings.html
@@ -42,7 +42,7 @@
 
 <!-- Content -->
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-8 map">
       Füge hier die Karte ein
