--- a/map-attributes.html
+++ b/map-attributes.html
@@ -54,37 +54,22 @@
         <li class="list-group-item"><i class="fas fa-venus text-warning mx-2"></i>Verschattet?</li>
       </ul>
 
-      <h3>Empfohlene Pflanze</h3>
-      <div class="card" style="width: 18rem;">
+<h3>Empfohlene Pflanze</h3>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 d-flex justify-content-center">
+      <div class="card" style="width: 20rem;">
         <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/f/f7/2010_sonnenblume_%28Helianthus_annuus%29.JPG" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">Sonnenblume</p>
-      </div>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6 d-flex justify-content-center">
-
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 20rem;>
-        <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Heading 1</h5>
-          <p class="card-text">some text</p>
-          <a href="#" class="btn btn-primary">a button</a>
+          <h5 class="card-title">Sonnenblume</h5>
         </div>
       </div>
     </div>
     <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 20rem;>
-        <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/f/f7/2010_sonnenblume_%28Helianthus_annuus%29.JPG" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Heading 2</h5>
-          <p class="card-text">some text</p>
-          <a href="#" class="btn btn-primary">a button</a>
+          <h5 class="card-title">Sonnenblume</h5>
         </div>
       </div>
     </div>
